--- a/prep/hs/cs/v2020/carbon_storage_data_prep.Rmd
+++ b/prep/hs/cs/v2020/carbon_storage_data_prep.Rmd
@@ -1,8 +1,10 @@
 ---
-title: 'OHI+ Palmyra 2020: Habitat Services Subgoal Carbon Storage'
+title: 'Carbon Storage Sub-goal'
+subtitle: 'OHI+ Palmyra 2020 Assessment'
 author: "*Compiled on `r date()` by `r Sys.info()['user']`*"
 output: 
   html_document:
+    code_folding: show
     toc: true
     toc_depth: 3 
     toc_float: yes
@@ -10,14 +12,14 @@ output:
     theme: cerulean
     highlight: haddock
     includes: 
-     in_header: '../../../src/templates/ohi_hdr.html' 
+     in_header: '~/github/pal-prep/src/templates/pal_hdr.html' 
   pdf_document:
     toc: true
 ---
 
 # Summary
 
-This script classifies tree species into native and nonnative groups and finds the percent of total area occupied by native tree species. The carbon storage status is based on the percent of land occupied by native tree species.      
+This script classifies tree species into native and nonnative groups and finds the percent of total area occupied by native tree species in 2016. The carbon storage status is based on the percent of land occupied by native tree species.      
 
 # Data 
 
@@ -31,8 +33,7 @@ Citation: Struckhoff, M.A., 2019, Woody species crown and vegetation community d
 
 # Setup
 
-```{r setup, message = F, warning = F}
-knitr::opts_chunk$set(echo = FALSE)
+```{r setup, message=F, warning=F, results='hide'}
 
 library(tidyverse)
 library(sf)
@@ -82,16 +83,17 @@ trees_edit <- trees %>%
   dplyr::select(-valid)
 
 # Save to the raw folder 
-st_write(trees_edit, file.path(dir_goal, 'raw/tree_map.shp'), driver = "ESRI Shapefile")
+st_write(trees_edit, file.path(dir_goal, 'raw/tree_map.shp'),
+         driver = "ESRI Shapefile")
 
 # Check for NA valid geometries instead of False
 # Not sure what to do about these 
 geom_na <- trees %>% 
-  dplyr::filter(is.na(valid)) # Found missing ones - these geometries are corrupt not invalid
+  dplyr::filter(is.na(valid)) # Found missing ones - corrupt not invalid
 
 ```
 
-## Categorize Native and Nonnative Species
+## Categorize Native/Nonnative Species
 
 The carbon storage goal is based on percent coverage of native tree species, we need to identify which of the mapped species are native vs. nonnative.   
 
@@ -126,18 +128,22 @@ The following tree species are included in the mapping project and we have desig
 tree_map <- st_read(file.path(dir_goal, "raw"), layer = "tree_map")
 
 # List of native plants:
-natives <- c("Barringtonia asiatica", "Cordia subcordata", "Guettarda speciosa",
-             "Heliotropium foertherianum", "Hernandia nymphaeifolia", "Ipomoea",
-             "Pandanus tectorius", "Pisonia grandis", "Phymatosorus scolopendria",
-             "Premna serratifolia", "Scaevola taccada")
+natives <- c("Barringtonia asiatica", "Cordia subcordata",
+             "Guettarda speciosa","Heliotropium foertherianum",
+             "Hernandia nymphaeifolia", "Ipomoea",
+             "Pandanus tectorius", "Pisonia grandis",
+             "Phymatosorus scolopendria", "Premna serratifolia",
+             "Scaevola taccada")
 
 # Add status:
 tree_cat <- tree_map %>% 
-  mutate(category = ifelse(species %in% natives, "native", "nonnative")) %>% 
+  mutate(category = ifelse(species %in% natives,
+                           "native", "nonnative")) %>% 
   filter(species != "Ipomoea" & species != "Nephrolepis")
 
 # Save to int folder
-write_sf(tree_cat, file.path(dir_goal, 'int/tree_category.shp'), driver = "ESRI Shapefile")
+write_sf(tree_cat, file.path(dir_goal, 'int/tree_category.shp'),
+         driver = "ESRI Shapefile")
 ```
  
 ## Calculate Area 
@@ -146,7 +152,8 @@ Find the area of native vs. nonnative trees on the islands
 
 ```{r calculate-area, eval=F}
 
-tree_cat <- st_read(file.path(dir_goal, "int"), layer = "tree_category") 
+tree_cat <- st_read(file.path(dir_goal, "int"),
+                    layer = "tree_category") 
 
 # Change area in square meters to area in square km 
 # Find area of native and nonnative species
@@ -160,16 +167,17 @@ tree_area <- tree_cat %>%
 plot(tree_area)
 
 # Save to int folder
-write_sf(tree_area, file.path(dir_goal, "int/tree_area.shp"), driver = "ESRI Shapefile", overwrite = TRUE)
+write_sf(tree_area, file.path(dir_goal, "int/tree_area.shp"),
+         driver = "ESRI Shapefile", overwrite = TRUE)
 
 ```
 
 ## Calculate Status
  
-*Reference Point:* 95% of the forest area dominated by native trees   
+**Reference Point:** 95% of the forest area dominated by native trees   
 
+The status is calculated as the current percent of forest dominated by native trees over the reference point percentage as in the following equation:   
 
-The status is calculated as the current percent of forest dominated by native trees over the reference point percentage   
 $status~=~percent~cover~/~reference~point~percent~cover$   
  
 ```{r calc-status, eval=F}
@@ -208,6 +216,7 @@ write_csv(cs_status, file.path(dir_goal, "output/cs_status.csv"))
 ## Save to Toolbox 
 
 ```{r save-to-toolbox, eval=F}
+cs_status <- read_csv(file.path(dir_goal, "output/cs_status.csv"))
 write_csv(cs_status, file.path(dir_scores, 'layers/hs_carbon_storage_status.csv'))
 ```
  
