--- a/prep/bd/hab/v2020/corals_data_prep.Rmd
+++ b/prep/bd/hab/v2020/corals_data_prep.Rmd
@@ -1,8 +1,10 @@
 ---
-title: 'OHI+ Palmyra 2020: Habitats Subgoal Corals'
+title: 'Habitats Sub-goal: Coral'
+subtitle: 'OHI+ Palmyra 2020 Assessment'
 author: "*Compiled on `r date()` by `r Sys.info()['user']`*"
 output: 
   html_document:
+    code_folding: show
     toc: true
     toc_depth: 3 
     toc_float: yes
@@ -10,14 +12,14 @@ output:
     theme: cerulean
     highlight: haddock
     includes: 
-     in_header: '../../../src/templates/ohi_hdr.html' 
+     in_header: '~/github/pal-prep/src/templates/pal_hdr.html' 
   pdf_document:
     toc: true
 ---
 
 # Summary
 
-This script uses benthic habitat mapping shapefiles to calculate the percent live coral cover across four regions of interest on the reef to estimate the condition of coral reef habitats. 
+This script uses benthic habitat mapping shapefiles to calculate the percent live coral cover across four regions of interest on the reef to estimate the condition of coral reef habitats.   
 
 # Data 
 
@@ -29,8 +31,7 @@ Citation: U.S. Department of Commerce, National Oceanic and Atmospheric Administ
 
 # Setup
 
-```{r setup, message = F, warning = F}
-knitr::opts_chunk$set(echo = FALSE)
+```{r setup, message=F, warning=F, results='hide'}
 
 library(tidyverse)
 library(janitor)
@@ -64,17 +65,11 @@ The following zones are grouped together to form the four major reef zone of int
 
 The fore reef is reassigned to part of the reef crest to better reflect the position of those data points on the reef. The Bank/Shelf and Bank/Shelf Escarpment are then grouped together and renamed as the fore reef with an additional designation to differentiate the western fore reef and the eastern fore reef. These groupings follow the zones delineated by NOAA in the Coral Reef Ecosystems Monitoring Report for the Pacific Remote Islands Marine National Monument, available [here](https://repository.library.noaa.gov/view/noaa/23421).   
 
-Using these groupings, the total number of observations in each zone are:   
-
- - Back Reef:   126  
- - Reef Crest:  12
- - Fore Reef W: 65
- - Fore Reef E: 92
- - Lagoon:      146   
  
 ```{r coral-maps, eval=F}
 
-hab_map <- st_read(file.path(dir_anx, '_raw_data/NCCOS_data/habitat_map'), layer = "Palmyra_Habitat_Map_Final") %>% 
+hab_map <- st_read(file.path(dir_anx, '_raw_data/NCCOS_data/habitat_map'),
+                   layer = "Palmyra_Habitat_Map_Final") %>% 
   st_transform(wgs84)
 
 # Interested in the coral cover map which is column 'P_CORAL_CV'
@@ -151,12 +146,12 @@ write_csv(zones_final, file.path(dir_goal, "int/coral_zones.csv"))
 
 ## Calculate Coral Status
 
-Reference points for coral cover zones are:   
+**Reference Points:** Reference points were established for each coral zone:      
 
- - Back Reef:  10-50% (2) 
- - Reef Crest: 10-50% (2)   
- - Fore Reef:  50-90% (3)  
- - Lagoon:     10-50% (2)   
+ - Back Reef:  10-50%  
+ - Reef Crest: 10-50%   
+ - Fore Reef:  50-90%   
+ - Lagoon:     10-50%    
  
 Coral reef status is first calculated for each zone. The status is calculated as the area of the reef zone falling within or above the reference point category divided by the total area of the reef zone, as in the following equation:  
 
@@ -208,7 +203,7 @@ write_csv(coral_status, file.path(dir_goal, "output/coral_status.csv"))
 
 ## Coral Habitat Extent
 
-Find the extent (km^2^) of entire coral reef habitat. This extent is used in creating weights for pressures and resiliences.  
+Find the extent (km^2^) of entire coral reef habitat. This extent is used in creating weights for pressures and resilience.  
 
 ```{r coral-hab-extent, eval=F}
 zones <- read_csv(file.path(dir_goal, "int/coral_zones.csv"))
